Some improvements (primary at pwd reset and change page) -Improvement: Removed FluentValidation from blazor project and moved validation to page. -Improvement: Added error handling to JSRuntime calls. -Fix: Fixed event callback problem with PasswordField.

--- a/SchulCloud.Web/SchulCloud.Web/Components/Forms/PasswordField.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Forms/PasswordField.razor
@@ -10,8 +10,8 @@
         : Color.Default;
 }
 
-<MudTextField @bind-Value="@Value"
-              @bind-Value:event="@OnValueChange"
+<MudTextField @bind-Value="Value"
+              @bind-Value:event="OnValueChange"
               For="For"
               Class="@Class"
               Label="@Label"
