--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/ChangePassword.razor
@@ -1,21 +1,21 @@
-﻿@using Blazored.FluentValidation
-
-<SchulCloudPageTitle Title="@Localizer["title"]" />
+﻿<SchulCloudPageTitle Title="@Localizer["title"]" />
 
 <MudPaper Class="py-3 px-3">
-    <EditForm Model="_model" OnValidSubmit="OnValidSubmitAsync">
-        <FluentValidationValidator />
+    <EditForm Model="_model" OnValidSubmit="Form_OnValidSubmitAsync">
 
-        <Validator For="@(() => _model.CurrentPassword)" ValidateAsync="ValidateCurrentPasswordAsync" />
+        <Validator For="@(() => _model.CurrentPassword)" ValidateAsync="Form_CurrentPasswordValidateAsync" />
         <PasswordField @bind-Value="_model.CurrentPassword" For="@(() => _model.CurrentPassword)" Label="@Localizer["form_CurrentPassword"]"
                        RequiredError="@Localizer["form_NotEmpty"]" Required autocomplete="current-password" />
 
+        <Validator For="@(() => _model.NewPassword)" ValidateAsync="Form_NewPasswordValidateAsync" />
         <PasswordField @bind-Value="_model.NewPassword" For="@(() => _model.NewPassword)" Label="@Localizer["form_NewPassword"]"
                        Class="my-3" RequiredError="@Localizer["form_NotEmpty"]" Required autocomplete="new-password" />
+
+        <Validator For="@(() => _model.ConfirmedPassword)" Validate="Form_ConfirmedPasswordValidate" />
         <PasswordField @bind-Value="_model.ConfirmedPassword" For="@(() => _model.ConfirmedPassword)" Label="@Localizer["form_ConfirmedPassword"]"
                        Class="mb-5" RequiredError="@Localizer["form_NotEmpty"]" Required autocomplete="new-password" />
 
-        <MudButton Color="Color.Primary" ButtonType="ButtonType.Submit">@Localizer["submitBtn"]</MudButton>
-        <MudButton Color="Color.Secondary" Href="@Routes.SecurityIndex()">@Localizer["cancelBtn"]</MudButton>
+        <MudButton Color="Color.Primary" ButtonType="ButtonType.Submit" Variant="Variant.Filled">@Localizer["submitBtn"]</MudButton>
+        <MudButton Href="@Routes.SecurityIndex()">@Localizer["cancelBtn"]</MudButton>
     </EditForm>
 </MudPaper>
