--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ResetPassword.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Auth/ResetPassword.razor
@@ -1,35 +1,40 @@
-﻿@using Blazored.FluentValidation
-
-<SchulCloudPageTitle Title="@Localizer["title"]"/>
+﻿<SchulCloudPageTitle Title="@Localizer["title"]"/>
 
 <MudPaper Class="mt-15 px-3 py-3">
     @if (_user is null)
     {
-        <MudText Typo="Typo.body1">@Localizer["userForm_Text"]</MudText>
+        <MudText>@Localizer["userForm_Text"]</MudText>
 
-        <EditForm Model="_model">
-            <Validator For="() => _model.User" ValidateAsync="ValidateUserAsync" />
-            <MudTextField @bind-Value="_model.User" Label="@Localizer["userForm_User"]" Required autocomplete="username" />
+        <MudForm @ref="_userForm" Model="_model" IsValidChanged="UserForm_ValidChangedAsync">
+            <MudTextField @bind-Value="_model.User" Label="@Localizer["userForm_User"]" RequiredError="@Localizer["form_NotEmpty"]"
+                          Validation="@(async (string value) => await UserForm_UserValidateAsync(value))" Required autocomplete="username" />
 
-            <MudButton Class="mt-3" ButtonType="ButtonType.Submit" Color="Color.Primary">@Localizer["userForm_SubmitBtn"]</MudButton>
-        </EditForm>
+            <MudButton Class="mt-3" Color="Color.Primary" Variant="Variant.Filled" OnClick="_userForm.Validate">
+                @Localizer["userForm_SubmitBtn"]
+            </MudButton>
+        </MudForm>
     }
     else if (ChangeToken is null)
     {
-        <MudText Typo="Typo.body1">@Localizer["sendMailText"]</MudText>
-        <MudButton Class="mt-3" Color="Color.Primary" OnClick="SendResetCode_ClickAsync" EndIcon="@MaterialSymbols.Outlined.Send">@Localizer["sendMailBtn"]</MudButton>
+        <MudText>@Localizer["sendMailText"]</MudText>
+        <MudButton Class="mt-3" Color="Color.Primary" OnClick="SendResetCode_ClickAsync"
+                   EndIcon="@MaterialSymbols.Outlined.Send" Variant="Variant.Filled">
+                   @Localizer["sendMailBtn"]
+        </MudButton>
     }
     else
     {
-        <EditForm Model="_model" OnValidSubmit="ResetPasswordAsync">
-            <FluentValidationValidator />
+        <EditForm Model="_model" OnValidSubmit="ResetForm_OnValidSubmitAsync">
 
-            <PasswordField @bind-Value="_model.NewPassword" For="@(() => _model.NewPassword)"
-                           Label="@Localizer["resetForm_NewPassword"]" Required autocomplete="new-password" />
-            <PasswordField @bind-Value="_model.ConfirmedPassword" For="@(() => _model.ConfirmedPassword)"
-                           Class="mt-2" Label="@Localizer["resetForm_ConfirmedPassword"]" Required autocomplete="off" />
+            <Validator For="@(() => _model.NewPassword)" ValidateAsync="ResetForm_NewPasswordValidateAsync" />
+            <MudTextField @bind-Value="_model.NewPassword" For="@(() => _model.NewPassword)" Label="@Localizer["resetForm_NewPassword"]"
+                           RequiredError="@Localizer["form_NotEmpty"]" Required autocomplete="new-password" />
 
-            <MudButton Class="mt-3" ButtonType="ButtonType.Submit" Color="Color.Primary">@Localizer["resetForm_SubmitBtn"]</MudButton>
+            <Validator For="@(() => _model.ConfirmedPassword)" Validate="ResetForm_ConfirmedPasswordValidate" />
+            <PasswordField @bind-Value="_model.ConfirmedPassword" For="@(() => _model.ConfirmedPassword)" Label="@Localizer["resetForm_ConfirmedPassword"]"
+                           Class="mt-2" RequiredError="@Localizer["form_NotEmpty"]" Required autocomplete="off" />
+
+            <MudButton Class="mt-3" Color="Color.Primary" ButtonType="ButtonType.Submit" Variant="Variant.Filled">@Localizer["resetForm_SubmitBtn"]</MudButton>
         </EditForm>
     }
 </MudPaper>
