--- a/SchulCloud.Web/SchulCloud.Web/Components/App.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/App.razor
@@ -10,6 +10,7 @@
     <base href="/" />
 
     <HeadOutlet @rendermode="InteractiveServer" />
+    <FaviconLinks />
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="/_static/_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
