--- a/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
+++ b/SchulCloud.Web/SchulCloud.Web/Components/Pages/Account/Security/Index.razor
@@ -50,7 +50,7 @@
     }
 
     @* Passkey sign in *@
-    @if (UserManager.SupportsUserPasskeySignIn)
+    @if (UserManager.SupportsUserPasskeys)
     {
         <MudExpansionPanel>
             <TitleContent>
